--- a/agrofix-backend/.env
+++ b/agrofix-backend/.env
@@ -1,2 +1,10 @@
 MONGO_URI=mongodb://localhost:27017/AgroFix
 PORT=5000
+
+
+# mongodb+srv://uttammaneofficial:<uttammaneofficial>@cluster0.3deav.mongodb.net/
+
+
+
+
+# mongodb+srv://uttammaneofficial:<db_password>@cluster0.3gq9q.mongodb.net/
